--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <!-- Spinner End -->
 
     <!-- Navbar start -->
-    <div class="container-fluid border-bottom bg-light wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid border-bottom wow fadeIn with-grass" data-wow-delay="0.1s">
+
         <!-- <div class="container topbar bg-primary d-none d-lg-block py-2" style="border-radius: 0 40px">
             <div class="d-flex justify-content-between">
                 <div class="top-info ps-2">
@@ -147,52 +148,59 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid py-5 about bg-light">
-        <div class="container py-5">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="video border">
-                        <!-- c:\Users\jakub_w7ohip9\Downloads\gautam-arora-78Ae6N7rNvI-unsplash.jpg -->
-                        <!-- <img src="gautam-arora-78Ae6N7rNvI-unsplash.jpg" style="max-width: 100%;
+    <div id="aaa">
+
+        <div class="container-fluid py-5 about" id="parallax-container">
+            <div class="container py-5" id="parallax-inside">
+                <div class="row g-5 align-items-center">
+                    <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="video border">
+                            <!-- c:\Users\jakub_w7ohip9\Downloads\gautam-arora-78Ae6N7rNvI-unsplash.jpg -->
+                            <!-- <img src="gautam-arora-78Ae6N7rNvI-unsplash.jpg" style="max-width: 100%;
                         height: auto;" alt="Description of your image"> -->
 
-                        <!-- <button type="button" class="btn btn-play" data-bs-toggle="modal"
+                            <!-- <button type="button" class="btn btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
                         </button> -->
-                    </div>
-                </div>
-                <div class="col-lg-7 wow fadeIn" data-wow-delay="0.3s">
-                    <h4
-                        class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">
-                        O nás</h4>
-                    <h1 class="text-dark mb-4 display-5">Učíme se chytře, abychom vytvořili světlou budoucnost pro vaše
-                        děti</h1>
-                    <p class="text-dark mb-4">Lorem Ipsum je pouze fiktivní text tiskového a sazečského průmyslu.
-                        tiskový a
-                        sazečský průmysl. Lorem Ipsum je standardním fiktivním textem průmyslu od 16. století, kdy
-                        neznámý tiskař
-                        Lorem Ipsum je standardním fiktivním textem průmyslu od 16. století.
-                    </p>
-                    <div class="row mb-4">
-                        <div class="col-lg-6">
-                            <h6 class="mb-3"><i class="fas fa-check-circle me-2"></i>Sportovní aktivity</h6>
-                            <h6 class="mb-3"><i class="fas fa-check-circle me-2 text-primary"></i>Venkovní hry</h6>
-                            <h6 class="mb-3"><i class="fas fa-check-circle me-2 text-secondary"></i>Výživné potraviny
-                            </h6>
-                        </div>
-                        <div class="col-lg-6">
-                            <h6 class="mb-3"><i class="fas fa-check-circle me-2"></i>Vysoká bezpečnost</h6>
-                            <h6 class="mb-3"><i class="fas fa-check-circle me-2 text-primary"></i>Přátelské prostředí
-                            </h6>
-                            <h6><i class="fas fa-check-circle me-2 text-secondary"></i>Kvalifikovaný učitel</h6>
                         </div>
                     </div>
-                    <a href="" class="btn btn-primary px-5 py-3 btn-border-radius">Více informací</a>
+                    <div class="col-lg-7 wow fadeIn" data-wow-delay="0.3s">
+                        <h4
+                            class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">
+                            O nás</h4>
+                        <h1 class="text-dark mb-4 display-5">Učíme se chytře, abychom vytvořili světlou budoucnost pro
+                            vaše
+                            děti</h1>
+                        <p class="text-dark mb-4">Lorem Ipsum je pouze fiktivní text tiskového a sazečského průmyslu.
+                            tiskový a
+                            sazečský průmysl. Lorem Ipsum je standardním fiktivním textem průmyslu od 16. století, kdy
+                            neznámý tiskař
+                            Lorem Ipsum je standardním fiktivním textem průmyslu od 16. století.
+                        </p>
+                        <div class="row mb-4">
+                            <div class="col-lg-6">
+                                <h6 class="mb-3"><i class="fas fa-check-circle me-2"></i>Sportovní aktivity</h6>
+                                <h6 class="mb-3"><i class="fas fa-check-circle me-2 text-primary"></i>Venkovní hry</h6>
+                                <h6 class="mb-3"><i class="fas fa-check-circle me-2 text-secondary"></i>Výživné
+                                    potraviny
+                                </h6>
+                            </div>
+                            <div class="col-lg-6">
+                                <h6 class="mb-3"><i class="fas fa-check-circle me-2"></i>Vysoká bezpečnost</h6>
+                                <h6 class="mb-3"><i class="fas fa-check-circle me-2 text-primary"></i>Přátelské
+                                    prostředí
+                                </h6>
+                                <h6><i class="fas fa-check-circle me-2 text-secondary"></i>Kvalifikovaný učitel</h6>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn-primary px-5 py-3 btn-border-radius">Více informací</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- Modal Video -->
     <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -782,7 +790,7 @@
 
 
     <!-- Copyright Start -->
-    <div class="container-fluid copyright bg-dark py-4">
+    <div class="container-fluid copyright py-4 bottom" id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
@@ -814,8 +822,11 @@
 
     <!-- Template Javascript -->
     <script>
-        window.addEventListener("load", (event) => {
-            new cursoreffects.rainbowCursor();
+        const parallaxContainer = document.getElementById('parallax-container');
+
+        window.addEventListener('scroll', () => {
+            const scrollY = window.scrollY;
+            parallaxContainer.style.backgroundPosition = `center ${scrollY * 0.6}px`; /* Adjust the '0.4' for the desired parallax effect */
         });
 
     </script>
