--- a/index.html
+++ b/index.html
@@ -93,20 +93,24 @@
                     data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars text-primary"></span>
                 </button>
+
+                <!-- Domů, O nás, Ceník, Pro rodiče, Kontakt -->
+
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav mx-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <div class="nav-item dropdown">
+                        <a href="index.html" class="nav-item nav-link active">Domů</a>
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">O nás</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
                                 <a href="about.html" class="dropdown-item">Představení</a>
                                 <a href="team.html" class="dropdown-item">Náš tým</a>
                                 <a href="testimonial.html" class="dropdown-item">Rodiče o nás říkají</a>
                             </div>
-                        </div>
-                        <a href="service.html" class="nav-item nav-link">Služby</a>
-                        <a href="program.html" class="nav-item nav-link">Aktuality</a>
-                        <a href="contact.html" class="nav-item nav-link">Kontakt</a>
+                        </div> -->
+                        <a href="onas.html" class="nav-item nav-link">O nás</a>
+                        <a href="cenik.html" class="nav-item nav-link">Ceník</a>
+                        <a href="rodice.html" class="nav-item nav-link">Pro rodiče</a>
+                        <a href="kontakt.html" class="nav-item nav-link">Kontakt</a>
                     </div>
                     <div class="d-flex me-4">
                         <div class="d-flex flex-column pe-3 border-primary">
@@ -142,6 +146,14 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
                         <div class="video border">
+                            <!-- c:\Users\jakub_w7ohip9\Downloads\gautam-arora-78Ae6N7rNvI-unsplash.jpg -->
+                            <!-- <img src="gautam-arora-78Ae6N7rNvI-unsplash.jpg" style="max-width: 100%;
+                        height: auto;" alt="Description of your image"> -->
+
+                            <!-- <button type="button" class="btn btn-play" data-bs-toggle="modal"
+                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
+                            <span></span>
+                        </button> -->
                         </div>
                     </div>
                     <div class="col-lg-7 wow fadeIn" data-wow-delay="0.3s">
@@ -381,8 +393,12 @@
             <div class="row g-5">
                 <div class="col-md-6 col-lg-4 col-xl-3">
                     <div class="footer-item">
-                        <img src="logo.png" style="max-width: 100%;
-                        height: auto;" alt="Popis vašího obrázku">
+
+                        <div id="text-logo">
+                            <h1 id="text-logo-skolka">Školka</h1>
+                            <h1 id="text-logo-vcelka">Včelka</h1>
+                        </div>
+
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3">
@@ -394,11 +410,33 @@
                             <p>Středa: 8:00 - 17:00</p>
                             <p>Čtvrtek: 8:00 - 17:00</p>
                             <p>Pátek: 8:00 - 17:00</p>
-                            <p>Sobota: 8:00 - 17:00</p>
-                            <p class="mb-0">Neděle: Zavřeno</p>
+                            <p class="mb-0">Sobota, Neděle: Zavřeno</p>
                         </div>
                     </div>
                 </div>
+
+                <div class="container py-5">
+                    <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">
+                        Contact Us
+                    </h4>
+                    <form action="send_email.php" method="post">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" name="name" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" name="email" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea name="message" class="form-control" rows="4" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </form>
+                </div>
+                
+
                 <div class="col-md-6 col-lg-4 col-xl-3">
                     <div class="footer-item">
                         <h4
