--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://localhost:3000/;"> -->
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -419,7 +420,7 @@
                     <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">
                         Contact Us
                     </h4>
-                    <form action="send_email.php" method="post">
+                    <form action="./send_email.php" method="post">
                         <div class="mb-3">
                             <label for="name" class="form-label">Name</label>
                             <input type="text" name="name" class="form-control" required>
