--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     </div>
                 </div>
 
-                <div class="container py-5">
+                <!-- <div class="container py-5">
                     <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">
                         Contact Us
                     </h4>
@@ -435,7 +435,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary">Send Message</button>
                     </form>
-                </div>
+                </div> -->
                 
 
                 <div class="col-md-6 col-lg-4 col-xl-3">
